--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "faker": "^4.1.0",
     "helmet": "^3.21.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
