--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^1.19.2",
     "path": "^0.12.7",
     "sqlite3": "^4.1.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "uuid": "^3.3.3"
   }
 }
